# ml-ops

./: Makefile  README.md  pyproject.toml
gpu_simulator/src/gpu_simulator/: examples.py  load_tester.py  memory_manager.py  quick_demo.py  tensor_ops.py
k8s_load_balancer/: README.md  backend.py
k8s_load_balancer/src/mlip-kubernetes-lab/: Dockerfile.backend  Dockerfile.loadbalancer  README.md  backend-deployment.yaml  backend-service.yaml  load_balancer.py  loadbalancer-deployment.yaml
ml_inference_tooling/: README.md
ml_inference_tooling/src/ml_inference_tooling/config/: models_config.py
ml_inference_tooling/src/ml_inference_tooling/examples/: profile_bert.py
ml_inference_tooling/src/ml_inference_tooling/profiler/: base_profiler.py  torchscript_profiler.py  triton_profiler.py
ml_inference_tooling/src/ml_inference_tooling/utils/: device_info.py  metrics.py  model_converter.py
src/gpu_simulator/: README.md  gpu_simulator.py  multi_gpu.py
src/ml_inference_tooling/: setup.py
src/ml_inference_tooling/config/: default_config.py
src/ml_inference_tooling/examples/: profile_all.py
src/ml_inference_tooling/profiler/: onxx_profiler.py  tensorrt_profiler.py  vllm_profiler.py
src/ml_inference_tooling/utils/: data_loader.py
