[tool.poetry]
name = "ml-ops"
version = "0.1.0"
description = "Monitoring, GPU optimizations, etc"
authors = ["rushilsheth"]
readme = "README.md"
packages = [{include = "src"}
]

[tool.poetry.dependencies]
tf-keras = ">=2.19.0,<3.0.0"
torch = ">=1.13.0"
wandb = ">=0.19.8,<0.20.0"
transformers = ">=4.50.3,<5.0.0"
datasets = ">=3.5.0,<4.0.0"
accelerate = "==0.26.0"
python = ">=3.11"
# flash-attn is intentionally omitted from the dependency list because it must be installed with:
#   poetry run pip install flash_attn --no-build-isolation
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.1"
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
